--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "touchtunes-web-assignment",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8888",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.19.2",
+    "bootstrap": "4.5.2",
+    "express": "^4.17.1",
+    "lodash": "4.17.19",
+    "prop-types": "15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "1.3.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "2.3.0",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +49,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.168",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "request": "^2.88.2"
   }
 }
