--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/spotify-api": "0.0.7",
     "axios": "^0.19.2",
     "bootstrap": "4.5.2",
     "express": "^4.17.1",
