--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/styled-components": "^5.1.7",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "request": "^2.88.2"
   }
